Downloads/project_fl-a/test/parser/bad/b_bad_while_start.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

while:
    pass

print("OK")