Downloads/project_fl-a/test/parser/bad/b_bad_while_start.py.err
CHECK:      b_bad_while_start.py:3:6: error: Unexpected token [colon]: :
CHECK-NEXT: while:

CHECK:      b_bad_while_start.py:4:1: error: Unexpected token [INDENT]
CHECK-NEXT: pass

CHECK:      b_bad_while_start.py:6:1: error: Unexpected token [DEDENT]
CHECK-NEXT: print("OK")

CHECK:      3 errors generated!
